<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="reset_values">Reset Defaults</string>
    <string name="result">Results</string>
    <string name="app_name">BuyOrRent</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Buy Or Rent</string>
    <string name="title_activity_buy"><b>BUY</b></string>
    <string name="title_activity_rent"><b>RENT</b></string>
    <string name="title_activity_tax"><b>TAX</b></string>
    <string name="buyprofit">Buy Profit</string>
    <string name="buyloss">Buy Loss</string>
    <string name="rentprofit">Rent Profit</string>
    <string name="rentloss">Rent Loss</string>
    <string name="netprofit">Net Buy Profit</string>
    <string name="netloss">Net Buy Loss</string>
    <string name="decisionbuy">Buying is profitable</string>
    <string name="decisionrent">Renting is profitable</string>
    <string name="housePrice">House Price</string>
    <string name="downPay">Down Payment</string>
    <string name="loanAmt">Loan Amount</string>
    <string name="intRate">Interest Rate</string>
    <string name="tenure">Loan Tenure</string>
    <string name="holdPeriod">Holding Period</string>
    <string name="apprRate">Appreciation\nRate</string>
    <string name="buyUtilities">Utilities\n(Monthly)</string>
    <string name="yearlyExpenses">Yearly Expenses</string>
    <string name="yearTax">Property Tax</string>
    <string name="yearlyMaint">Maintenance</string>
    <string name="yearlyPropIns">Insurance</string>
    <string name="periExpenses">Peripheral Expenses</string>
    <string name="mortInsRate">Mortgage\nInsurance</string>
    <string name="closingCost">Closing Cost</string>
    <string name="movingInCost">Moving-in Cost</string>
    <string name="rent">Rent\n(Monthly)</string>
    <string name="yearlyRentIncrease">Rent Increase\nRate (Yearly)</string>
    <string name="rentInsurance">Renters Insurance\n(Monthly)</string>
    <string name="utilities">Utilities\n(Monthly)</string>
    <string name="savingReturns">Return on savings\nas compared to buy\n(Yearly)</string>
    <string name="taxBracket">Tax Bracket</string>
    <string name="taxBracketHelp">Keep this zero or blank if itemized deduction is less than standard deduction</string>
    <string name="buyInputs">Buy Inputs</string>
    <string name="rentInputs">Rent Inputs</string>
    <string name="tempnum">10000</string>
    <string name="title_activity_result_activiy">Results</string>
    <string name="action_settings">Settings</string>
    <string name="unit_currency">$</string>
    <string name="unit_percent">%</string>
    <string name="unit_mortInsRate">% of house price</string>
    <string name="unit_closingCost">% of selling price</string>
    <string name="unit_years">Years</string>
    <string name="title_activity_report">Report</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="mortgage">Mortgage Payement</string>
    <string name="propTax">Property Tax</string>
    <string name="insu">Insurance</string>
    <string name="mortInsu">Mortgage Insurance</string>
    <string name="utilMain">Mainten. and Utilities</string>
    
    <string name="monthlyBuyExp">Monthly expenses if you buy</string>

</resources>