<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" 
    android:padding="5dip">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
             
        <TextView
	        android:id="@+id/actRent_textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="25dip"
	        android:text="@string/rent"
	        android:textSize="18sp" />

	    <EditText
	        android:id="@+id/actRent_editText1"
	        android:layout_width="75dip"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/actRent_textView1"
	        android:layout_marginLeft="85dip"
	        android:layout_toRightOf="@+id/actRent_textView1"
	        android:inputType="number"
	        android:maxLength="5"
	        android:maxWidth="75dip" />
	    
        <TextView
	        android:id="@+id/actRent_editText1_unit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/actRent_editText1"
	        android:layout_alignBottom="@+id/actRent_editText1"
	        android:layout_marginBottom="6dip"
	        android:layout_marginLeft="3dip"
	        android:text="@string/unit_currency"
	        android:textSize="15sp"/>	    
	    
	    <TextView
	       android:id="@+id/actRent_textView2"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_alignParentLeft="true"
	       android:layout_below="@+id/actRent_textView1"
	       android:layout_marginTop="40dip"
	       android:text="@string/yearlyRentIncrease"
	       android:textSize="18sp" />
	        
	    <EditText
	        android:id="@+id/actRent_editText2"
	        android:layout_width="75dip"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/actRent_textView2"
	        android:layout_alignLeft="@+id/actRent_editText1"
	        android:inputType="numberDecimal"
	        android:maxLength="5"
	        android:maxWidth="75dip"/>
	    
        <TextView
	        android:id="@+id/actRent_editText2_unit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/actRent_editText2"
	        android:layout_alignBottom="@+id/actRent_editText2"
	        android:layout_marginBottom="6dip"
	        android:layout_marginLeft="3dip"
	        android:text="@string/unit_percent"
	        android:textSize="15sp"/>	    
	     
	     <TextView
	        android:id="@+id/actRent_textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/actRent_textView2"
	        android:layout_marginTop="40dip"
	        android:text="@string/rentInsurance"
	        android:textSize="18sp" />
	
	    <EditText
	        android:id="@+id/actRent_editText3"
	        android:layout_width="75dip"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/actRent_textView3"
	        android:layout_alignLeft="@+id/actRent_editText2"
	        android:inputType="number"
	        android:maxLength="5"
	        android:maxWidth="75dip"/>
	    
        <TextView
	        android:id="@+id/actRent_editText3_unit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/actRent_editText3"
	        android:layout_alignBottom="@+id/actRent_editText3"
	        android:layout_marginBottom="6dip"
	        android:layout_marginLeft="3dip"
	        android:text="@string/unit_currency"
	        android:textSize="15sp"/>	    
	    
	    <TextView
	        android:id="@+id/actRent_textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/actRent_textView3"
	        android:layout_marginTop="40dip"
	        android:text="@string/utilities"
	        android:textSize="18sp" />
	
	    <EditText
	        android:id="@+id/actRent_editText4"
	        android:layout_width="75dip"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/actRent_editText3"
	        android:layout_alignBottom="@+id/actRent_textView4"
	        android:inputType="number"
	        android:maxLength="5"
	        android:maxWidth="75dip"/>
	    
        <TextView
	        android:id="@+id/actRent_editText4_unit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/actRent_editText4"
	        android:layout_alignBottom="@+id/actRent_editText4"
	        android:layout_marginBottom="6dip"
	        android:layout_marginLeft="3dip"
	        android:text="@string/unit_currency"
	        android:textSize="15sp"/>	    
	    
	    <TextView
	        android:id="@+id/actRent_textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/actRent_textView4"
	        android:layout_marginTop="40dip"
	        android:text="@string/savingReturns"
	        android:textSize="18sp" />
	
	    <EditText
	        android:id="@+id/actRent_editText5"
	        android:layout_width="75dip"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/actRent_editText4"
	        android:layout_alignBottom="@+id/actRent_textView5"
	        android:inputType="numberDecimal"
	        android:maxLength="5"
	        android:maxWidth="75dip"/>	  
	        
        <TextView
	        android:id="@+id/actRent_editText5_unit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/actRent_editText5"
	        android:layout_alignBottom="@+id/actRent_editText5"
	        android:layout_marginBottom="6dip"
	        android:layout_marginLeft="3dip"
	        android:text="@string/unit_percent"
	        android:textSize="15sp"/>	    
	    
    </RelativeLayout>
    
</ScrollView>    