<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="5dip"
    android:paddingRight="5dip" >
    
    <TextView
		android:id="@+id/actRes_textViewTitle"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip"
		android:text="@string/buyprofit"
		android:gravity="center"
		android:textStyle="bold"
		android:textSize="20sp" />
    
 	<LinearLayout
        android:id="@+id/actRes_layout_bar_graph"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actRes_textViewTitle"
        android:layout_marginTop="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginLeft="5dip">
    
	    <com.echo.holographlibrary.BarGraph
	        android:layout_width="fill_parent"
	        android:layout_height="150dip"
	        android:id="@+id/res_bar_graph"
	        android:background="@drawable/border"/>    
    </LinearLayout>
    
 	<ScrollView 
	    android:id="@+id/actRes_scrollView1"
	    android:layout_below="@+id/actRes_layout_bar_graph"
	    android:layout_marginTop="5dip"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    
 	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	    
	 	    <TextView
				android:id="@+id/actRes_Buy_Input_Title"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:text="@string/buyInputs"
				android:gravity="left"
				android:textStyle="bold"
				android:textSize="20sp" />
	    
	    	<View
		        android:id="@+id/actRes_dividerTitle"
		        android:layout_below="@+id/actRes_Buy_Input_Title"
				android:layout_width="fill_parent"		
				android:layout_marginTop="10dip"
				android:layout_height="1dp"
				android:background="@android:color/darker_gray"/>
	    	
	    	<TextView
		        android:id="@+id/actRes_home_price_title"
		        android:layout_below="@+id/actRes_dividerTitle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/housePrice"
		        android:textSize="18sp"/>

		    <TextView
		        android:id="@+id/actRes_home_price_value"
		        android:layout_width="115dip"
		        android:maxWidth="115dip"
		        android:layout_height="wrap_content"
		        android:layout_alignTop="@+id/actRes_home_price_title"
		        android:layout_toRightOf="@+id/actRes_home_price_title"
		        android:layout_marginLeft="30dip"
		        android:text="@string/tempnum"
		        android:textSize="18sp"/>
		    
		    <SeekBar
		        android:id="@+id/actRes_home_price_seek"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/actRes_home_price_value"
		        android:layout_toRightOf="@+id/actRes_home_price_value"
		        android:layout_marginLeft="2dip"/>	
		        
		    <TextView
		        android:id="@+id/actRes_down_pay_title"
		        android:layout_below="@+id/actRes_home_price_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/downPay"
		        android:textSize="18sp"/>

		    <TextView
		        android:id="@+id/actRes_down_pay_value"
		        android:layout_width="115dip"
		        android:maxWidth="115dip"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@+id/actRes_down_pay_title"
		        android:layout_alignTop="@+id/actRes_down_pay_title"
		        android:layout_alignLeft="@+id/actRes_home_price_value"
		        android:text="@string/tempnum"
		        android:textSize="18sp"/>
		    
		    <SeekBar
		        android:id="@+id/actRes_down_pay_seek"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/actRes_down_pay_value"
		        android:layout_toRightOf="@+id/actRes_down_pay_value"
		        android:layout_alignLeft="@+id/actRes_home_price_seek"
		        android:layout_marginLeft="2dip"/>
		    
		    <TextView
		        android:id="@+id/actRes_int_rate_title"
		        android:layout_below="@+id/actRes_down_pay_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/intRate"
		        android:textSize="18sp"/>

		    <TextView
		        android:id="@+id/actRes_int_rate_value"
		        android:layout_width="115dip"
		        android:maxWidth="115dip"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@+id/actRes_int_rate_title"
		        android:layout_alignTop="@+id/actRes_int_rate_title"
		        android:layout_alignLeft="@+id/actRes_down_pay_value"
		        android:text="@string/tempnum"
		        android:textSize="18sp"/>
		    
		    <SeekBar
		        android:id="@+id/actRes_int_rate_seek"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/actRes_int_rate_value"
		        android:layout_toRightOf="@+id/actRes_int_rate_value"
		        android:layout_alignLeft="@+id/actRes_down_pay_seek"
		        android:layout_marginLeft="2dip"/>		
		        
		    <TextView
		        android:id="@+id/actRes_tenure_title"
		        android:layout_below="@+id/actRes_int_rate_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/tenure"
		        android:textSize="18sp"/>

		    <TextView
		        android:id="@+id/actRes_tenure_value"
		        android:layout_width="115dip"
		        android:maxWidth="115dip"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@+id/actRes_tenure_title"
		        android:layout_alignTop="@+id/actRes_tenure_title"
		        android:layout_alignLeft="@+id/actRes_down_pay_value"
		        android:text="@string/tempnum"
		        android:textSize="18sp"/>
		    
		    <SeekBar
		        android:id="@+id/actRes_tenure_seek"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/actRes_tenure_value"
		        android:layout_toRightOf="@+id/actRes_int_rate_value"
		        android:layout_alignLeft="@+id/actRes_down_pay_seek"
		        android:layout_marginLeft="2dip"/>		
		        
		    <TextView
		        android:id="@+id/actRes_holdPeriod_title"
		        android:layout_below="@+id/actRes_tenure_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/holdPeriod"
		        android:textSize="18sp"/>

		    <TextView
		        android:id="@+id/actRes_holdPeriod_value"
		        android:layout_width="115dip"
		        android:maxWidth="115dip"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@+id/actRes_holdPeriod_title"
		        android:layout_alignTop="@+id/actRes_holdPeriod_title"
		        android:layout_alignLeft="@+id/actRes_tenure_value"
		        android:text="@string/tempnum"
		        android:textSize="18sp"/>
		    
		    <SeekBar
		        android:id="@+id/actRes_holdPeriod_seek"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/actRes_holdPeriod_value"
		        android:layout_toRightOf="@+id/actRes_holdPeriod_value"
		        android:layout_alignLeft="@+id/actRes_tenure_seek"
		        android:layout_marginLeft="2dip"/>	
		        
		    <TextView
		        android:id="@+id/actRes_apprRate_title"
		        android:layout_below="@+id/actRes_holdPeriod_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/apprRate"
		        android:textSize="18sp"/>

		    <TextView
		        android:id="@+id/actRes_apprRate_value"
		        android:layout_width="115dip"
		        android:maxWidth="115dip"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@+id/actRes_apprRate_title"
		        android:layout_alignTop="@+id/actRes_apprRate_title"
		        android:layout_alignLeft="@+id/actRes_holdPeriod_value"
		        android:text="@string/tempnum"
		        android:textSize="18sp"/>
		    
		    <SeekBar
		        android:id="@+id/actRes_apprRate_seek"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/actRes_apprRate_value"
		        android:layout_toRightOf="@+id/actRes_apprRate_value"
		        android:layout_alignLeft="@+id/actRes_holdPeriod_seek"
		        android:layout_marginLeft="2dip"/>		
		        
	    	<View
		        android:id="@+id/actRes_divider_buy_bot"
		        android:layout_below="@+id/actRes_apprRate_title"
				android:layout_width="fill_parent"		
				android:layout_marginTop="10dip"
				android:layout_height="1dp"
				android:background="@android:color/darker_gray"/>			    
		        
		    <TextView
				android:id="@+id/actRes_Rent_Input_Title"
				android:layout_below="@+id/actRes_divider_buy_bot"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dip"
				android:text="@string/rentInputs"
				android:gravity="left"
				android:textStyle="bold"
				android:textSize="20sp" />
	    
	    	<View
		        android:id="@+id/actRes_divider_rent_top"
		        android:layout_below="@+id/actRes_Rent_Input_Title"
				android:layout_width="fill_parent"		
				android:layout_marginTop="10dip"
				android:layout_height="1dp"
				android:background="@android:color/darker_gray"/>	
				
	    	<TextView
		        android:id="@+id/actRes_rent_title"
		        android:layout_below="@+id/actRes_divider_rent_top"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/rent"
		        android:textSize="18sp"/>

		    <TextView
		        android:id="@+id/actRes_rent_value"
		        android:layout_width="115dip"
		        android:maxWidth="115dip"
		        android:layout_height="wrap_content"
		        android:layout_alignTop="@+id/actRes_rent_title"
		        android:layout_toRightOf="@+id/actRes_rent_title"
		        android:layout_marginLeft="50dip"
		        android:text="@string/tempnum"
		        android:textSize="18sp"/>
		    
		    <SeekBar
		        android:id="@+id/actRes_rent_seek"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/actRes_rent_value"
		        android:layout_toRightOf="@+id/actRes_rent_value"
		        android:layout_marginLeft="2dip"/>
		    
		    <TextView
		        android:id="@+id/actRes_rent_increase_title"
		        android:layout_below="@+id/actRes_rent_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dip"
		        android:text="@string/yearlyRentIncrease"
		        android:textSize="18sp"/>

		    <TextView
		        android:id="@+id/actRes_rent_increase_value"
		        android:layout_width="115dip"
		        android:maxWidth="115dip"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@+id/actRes_rent_increase_title"
		        android:layout_alignTop="@+id/actRes_rent_increase_title"
		        android:layout_alignLeft="@+id/actRes_rent_value"
		        android:text="@string/tempnum"
		        android:textSize="18sp"/>
		    
		    <SeekBar
		        android:id="@+id/actRes_rent_increase_seek"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/actRes_rent_increase_value"
		        android:layout_toRightOf="@+id/actRes_rent_increase_value"
		        android:layout_alignLeft="@+id/actRes_rent_seek"
		        android:layout_marginLeft="2dip"/>		    		    			    		        
	    	
	    </RelativeLayout>    
 	    
	    
 	</ScrollView>
	
</RelativeLayout>
